# canvas

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt  camera.cpp  camera.hpp  scene.cpp  scene.hpp  types.hpp
core/elements/: CMakeLists.txt  element.hpp  stroke.cpp  stroke.hpp
render/: CMakeLists.txt  renderer.cpp  renderer.hpp
ui/: CMakeLists.txt  canvas_view.cpp  canvas_view.hpp  canvas_window.cpp  canvas_window.hpp  main.cpp  slide_panel.cpp  slide_panel.hpp  tool_mode.hpp
